--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/pr7app.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.Desktop-ftp4j-1.7.2=C:\\Users\\Esteban\\Desktop\\ftp4j-1.7.2
+file.reference.ftp4j-1.7.2.jar=C:\\Users\\Esteban\\Desktop\\ftp4j-1.7.2\\ftp4j-1.7.2.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.Desktop-ftp4j-1.7.2}:\
+    ${file.reference.ftp4j-1.7.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
